crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E302_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E302 [*] Expected 2 blank lines, found 1
  --> E30.ipynb:21:1
   |
21 | def b():
   | ^^^
   |
help: Add missing blank line(s)
18 | def a():
19 |     pass
20 |
21 +
22 | def b():
23 |     pass
24 | # end
