crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E303_typing_stub.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E303 [*] Too many blank lines (2)
  --> E30.pyi:17:1
   |
17 | def grouped1(): ...
   | ^^^
18 | def grouped2(): ...
19 | def grouped3( ): ...
   |
help: Remove extraneous blank line(s)
15 - 
16 - 
   |

E303 [*] Too many blank lines (2)
  --> E30.pyi:22:1
   |
22 | class BackendProxy:
   | ^^^^^
23 |     backend_module: str
24 |     backend_object: str | None
   |
help: Remove extraneous blank line(s)
20 - 
21 - 
   |

E303 [*] Too many blank lines (2)
  --> E30.pyi:35:5
   |
35 |     def ungrouped(): ...
   |     ^^^
36 | a = "test"
   |
help: Remove extraneous blank line(s)
   |
33 +     
   |

E303 [*] Too many blank lines (2)
  --> E30.pyi:43:1
   |
43 | def outer():
   | ^^^
44 |      def inner():
45 |          pass
   |
help: Remove extraneous blank line(s)
41 - 
42 - 
   |
