crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__blank_lines_E305_notebook.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E305 [*] Expected 2 blank lines after class or function definition, found (1)
  --> E30.ipynb:55:1
   |
54 |     # another comment
55 | fn()
   | ^^
56 | # end
57 | # E306:3:5
   |
help: Add missing blank line(s)
55 - fn()
   |
